<resources>
    <string name="app_name">White Light Health Services</string>

    <string name="password_reg">Create a Password</string>
    <string name="hello">Hello, Create Your Workspace</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="signin"> Sign In</string>
    <string name="signin_btn">Sign In</string>
    <string name="signup">Not registered yet? Sign Up</string>

    <string name="get_started">Take a deep breath and keep going</string>

    <string name="title_text">Title</string>
    <string name="desc_text">Description</string>
    <string name="author_text">Author</string>


    <string name="textView">ARTICLES</string>
    <string name="save_btn">PUBLISH</string>
    <string name="showall_btn">SHOW ALL ARTICLES</string>

    <string name="textViewP">Today What I am Going to Do?</string>
    <string name="textViewP2">To Do List</string>
    <string name="upgrade_your">Upgrade Your,</string>
    <string name="add_details">Add New Details</string>
    <string name="weight_text">Weight</string>
    <string name="height_text">Height</string>
    <string name="age_text">Age</string>
    <string name="bmi_summarry">BMI Summarry</string>


</resources>