<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/wallpapernew"
tools:context=".SignUp">

<LinearLayout
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:layout_centerVertical="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="305dp" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />


    <TextView
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/seablue"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:hint="abc123@gmail.com"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/haloBlue" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/seablue"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/haloBlue" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="225dp"
        android:layout_height="76dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/signup_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>

</RelativeLayout>