<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/login_username"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/wallpapernew"
tools:context=".SignIn">


<LinearLayout
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:layout_centerVertical="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="283dp" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="386dp"
        android:layout_height="44dp"
        android:layout_below="@+id/login_applogo"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/haloBlue"
        android:textSize="38sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_below="@+id/signin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:hint="Email"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/haloBlue" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <EditText

        android:id="@+id/signin_password"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_below="@+id/login_username"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:hint="Password"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/haloBlue"
        android:ems="10"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />


    <Button
        android:id="@+id/signin_btn"
        android:layout_width="225dp"
        android:layout_height="76dp"
        android:layout_below="@+id/linear_layout2"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/signin_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="386dp"
        android:layout_height="44dp"
        android:layout_below="@+id/login_applogo"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/haloBlue"
        android:textSize="20sp" />


</LinearLayout>
</RelativeLayout>